--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "@vitalets/google-translate-api": "^9.2.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "google-translate-api": "^2.3.0",
     "mongoose": "^8.6.2",
